--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     background-color: #f4f4f4;
 }
 
-h1, h2 {
+h1 {
     margin-top: 20px;
 }
 
@@ -28,9 +28,3 @@ h1, h2 {
 .sound-button:hover {
     background-color: #0056b3;
 }
-
-.eq-slider, #volume {
-    width: 200px;
-    margin: 5px 0;
-}
-
